# sprite-cloud

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  NOTICE  Program.cs  QUICKSTART.md  README.md  SECURITY.md  SECURITY_AUDIT.md  appsettings.json  deploy-gv-web.sh  deploy-sc-web.sh  docker-compose.yml  games-vault.csproj  games-vault.sln  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sprite-cloud.flatpak
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
Arcade/: ArcadeCabinetSupervisor.cs  ArcadeGameFileResolver.cs
BackgroundJobs/: BackgroundJobCommandAttribute.cs  BackgroundJobCommandRegistry.cs  BackgroundJobExecutionContext.cs  BackgroundJobWorker.cs  IBackgroundJobClient.cs  IBackgroundJobCommand.cs  InternalJobsClient.cs  JobJson.cs  RomFolderWatcher.cs  ServiceCollectionExtensions.cs
Controllers/: AdminController.cs  ArcadeController.cs  DownloadsController.cs  GameFilesController.cs  GamePlayerFilesController.cs  GamesController.cs  HomeController.cs  ImportController.cs  JobsController.cs  LocalFolderImportController.cs  LocalFoldersController.cs  NetworkImportController.cs  NetworkSharesController.cs  PasskeysController.cs  ProfileBatterySavesController.cs  ProfilesController.cs  RoomController.cs  SessionController.cs  SourcesController.cs  SystemCoreMappingsController.cs  SystemFilesController.cs  WebImportController.cs  WebPlayerController.cs  WebSourceImportController.cs  WebSourcesController.cs
Data/: AppDbContext.cs
EverDrive/: EverDriveGbExportCommon.cs  EverDriveGbFirmwareService.cs
Gameplay/: BatterySavePolicy.cs  BatterySavePolicyResolver.cs  BatterySaveRuntimeSyncService.cs  GamePlayRoomService.cs  GamePlayRoomServiceModels.cs  GamePlayTelemetryService.cs  ProfileBatterySaveService.cs  RoomCodeGenerator.cs
Libretro/: Crc32.cs  LibretroDatabaseOptions.cs  LibretroDatabaseStore.cs  LibretroDatabaseSyncService.cs  ServiceCollectionExtensions.cs
Local/: LocalPathGuard.cs
Migrations/: 20260206185515_InitialCreate.Designer.cs  20260206185515_InitialCreate.cs  20260521132508_AddGamePlaySessions.Designer.cs  20260521132508_AddGamePlaySessions.cs  20260522001416_AddUserProfilesAndProfileTelemetry.Designer.cs  20260522001416_AddUserProfilesAndProfileTelemetry.cs  20260522155623_AddSystemCoreMappings.Designer.cs  20260522155623_AddSystemCoreMappings.cs  20260522160650_AddSystemCoreMappingAutoMapped.Designer.cs  20260522160650_AddSystemCoreMappingAutoMapped.cs  20260522180810_AddProfileInvitesAndPins.Designer.cs  20260522180810_AddProfileInvitesAndPins.cs  20260523190250_AddArcadeCabinets.Designer.cs  20260523190250_AddArcadeCabinets.cs  20260526231454_AddRoomSessionManagement.Designer.cs  20260526231454_AddRoomSessionManagement.cs  20260527184737_EnforceSingleActiveProfileSession.Designer.cs  20260527184737_EnforceSingleActiveProfileSession.cs  20260531230001_AddProfileUsernamesAndPasswords.Designer.cs  20260531230001_AddProfileUsernamesAndPasswords.cs  20260602003812_AddProfileShareLinksAndGuestProfiles.Designer.cs  20260602003812_AddProfileShareLinksAndGuestProfiles.cs  20260602231206_AddProfileBatterySaveHistory.Designer.cs  20260602231206_AddProfileBatterySaveHistory.cs  20260609155709_AddFailedLoginTracking.Designer.cs  20260609155709_AddFailedLoginTracking.cs  20260609170547_AddProfileShareRedeemSession.Designer.cs  20260609170547_AddProfileShareRedeemSession.cs  20260609185457_Batch4ModelChanges.Designer.cs  20260609185457_Batch4ModelChanges.cs  20260609191525_AddMissingDbIndexes.Designer.cs  (+22 more)
Models/: Arcade.cs  (+35 more)
gv-desktop/: AppRun  Cargo.toml  tauri.conf.json
gv-desktop/flatpak/: flathub.json  org.spritecloud.GamesVault.metainfo.xml  org.spritecloud.GamesVault.yml
gv-desktop/flatpak/repo/: summary  summary.idx
gv-desktop/flatpak/repo/refs/heads/app/org.spritecloud.GamesVault/x86_64/: master
gv-desktop/flatpak/repo/refs/heads/runtime/org.spritecloud.GamesVault.Debug/x86_64/: master
gv-desktop/flatpak/repo/summaries/: a86be86d0dcaf81ff713f78a968ddc9ce6fb848987a1ddb5e0d56d844e2ca0f0-79b8b40d672373bbb2d5fb0c0b19612efacb76a3451ae8c447be3ad79f79f296.delta
gv-desktop/src/: index.html  main.rs
gv-server/: Cargo.toml
gv-server/src/: commands.rs  config.rs  core_bridge.rs  dat.rs  encoder_probe.rs  gst_audio.rs  gst_video.rs  gv_web.rs  lib.rs  main.rs  platform.rs  player_bundle.js  player_server.rs  retry.rs  saves.rs  scan.rs  session.rs  streaming.rs  webrtc.rs  worker.rs  ws.rs
gv-server/src/commands/: dc_handler.rs  game.rs  mod.rs  save_handlers.rs  version.rs
gv-server/src/local/: api.rs  mod.rs  poller.rs  ui.rs
gv-server/src/worker/: core.rs  mod.rs  pid.rs  pool.rs  spawn.rs
gv-server/tests/: config_test.rs  core_download_test.rs  poll_response_test.rs
gv-worker/: .env.example  Cargo.toml
gv-worker/assets/: connect.js  index.html  index.js  player-bundle.js  player-entry.js
gv-worker/src/: audio_pipeline.rs  config.rs  core_bridge.rs  encoder_probe.rs  gst_video.rs  lib.rs  main.rs  main_body.rs  player_assets.rs  saves.rs  test_pattern.rs  test_tone.rs  vp8_encoder.rs
gv-worker/src/main_body/: handlers.rs  input.rs  mod.rs  streaming.rs  webrtc.rs
gv-worker/tests/: integration.rs
sc-desktop/: AppRun  Cargo.toml  tauri.conf.json
sc-desktop/capabilities/: default.json
sc-desktop/flatpak/: com.spritecloud.SpriteCloud.desktop  com.spritecloud.SpriteCloud.metainfo.xml  com.spritecloud.SpriteCloud.yml
sc-desktop/src/: index.html  main.rs
sc-desktop/tests/: gamepad-mapping.rs
sc-server/: Cargo.toml
sc-server/src/: config.rs  core_bridge.rs  dat.rs  encoder_probe.rs  gst_audio.rs  install.rs  lib.rs  library_state.rs  main.rs  nat.rs  platform.rs  player_server.rs  saves.rs  sc_web.rs  scan.rs  scan_cmd.rs  session.rs  setup.rs  streaming.rs  webrtc.rs
sc-server/src/commands/: dc_handler.rs  game.rs  mod.rs  version.rs
sc-server/tests/: config_test.rs  core_download_test.rs  poll_response_test.rs
(+1226 files in other folders)
