[workspace]
resolver = "2"
members = ["gv-server", "gv-core", "libretro-runner"]

# Point webrtc-rs crates to local fork with trace logging
[patch.crates-io]
webrtc = { path = "/root/webrtc-rs-fork/webrtc" }
webrtc-ice = { path = "/root/webrtc-rs-fork/ice" }
turn = { path = "/root/webrtc-rs-fork/turn" }
stun = { path = "/root/webrtc-rs-fork/stun" }
sdp = { path = "/root/webrtc-rs-fork/sdp" }
webrtc-mdns = { path = "/root/webrtc-rs-fork/mdns" }
rtp = { path = "/root/webrtc-rs-fork/rtp" }
rtcp = { path = "/root/webrtc-rs-fork/rtcp" }
webrtc-srtp = { path = "/root/webrtc-rs-fork/srtp" }
dtls = { path = "/root/webrtc-rs-fork/dtls" }
webrtc-sctp = { path = "/root/webrtc-rs-fork/sctp" }
interceptor = { path = "/root/webrtc-rs-fork/interceptor" }
webrtc-media = { path = "/root/webrtc-rs-fork/media" }
webrtc-util = { path = "/root/webrtc-rs-fork/util" }
