[workspace]
resolver = "2"
members = ["gv-server", "gv-core", "libretro-runner"]

# Patch webrtc-rs crates from fork (makes RTCIceCandidatePair field public, trace logging)
[patch.crates-io]
webrtc = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
webrtc-ice = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
turn = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
stun = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
sdp = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
webrtc-mdns = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
rtp = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
rtcp = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
webrtc-srtp = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
dtls = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
webrtc-sctp = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
interceptor = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
webrtc-media = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
webrtc-util = { git = "https://github.com/longjoel/webrtc-rs-fork", branch = "main" }
