[package]
name = "gv-desktop"
version = "0.1.0"
edition = "2021"
description = "Games Vault desktop client — Steam Deck AppImage"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gilrs = "0.10"
tauri-plugin-store = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
