[package]
name = "gv-worker"
version = "0.1.0"
edition = "2021"
description = "Games Vault worker — per-game process launched by gv-server"

[[bin]]
name = "gv-worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
webrtc = { version = "0.17", features = ["pem"] }
env-libvpx-sys = { version = "5.1", features = ["generate"] }

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
serde_json = "1"
