[package]
name = "gv-worker"
version = "0.1.0"
edition = "2021"
description = "Games Vault worker — GStreamer-powered WebRTC game streaming"

[[bin]]
name = "gv-worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webrtc = { version = "0.17", features = ["pem"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "time"] }
local-ip-address = "0.6"
gstreamer = "0.23"
gstreamer-app = "0.23"
libretro-runner = { path = "../libretro-runner" }
gv-shm = { path = "../gv-shm" }
sha2 = "0.11.0"
hex = "0.4.3"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
